Adding github deployment code

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "license": "MIT",
   "author": "Incubyte",
@@ -24,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/incubyte/incubyte-react-a11y-project/issues"
   },
-  "homepage": "https://github.com/incubyte/incubyte-react-a11y-project",
+  "homepage": "https://thakurpranjal1911.github.io/react-a11y-project/",
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -38,6 +40,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
